change css style to latest version

--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
           <img src="img/banner/banner2.jpg" alt="轮播图2" />
         </li>
         <li class="banner-item">
-          <img src="img/banner/banner1.jpg" alt="轮播图3" />
+          <img src="img/banner/banner3.jpg" alt="轮播图3" />
         </li>
         <li class="banner-item">
-          <img src="img/banner/banner2.jpg" alt="轮播图4" />
+          <img src="img/banner/banner4.jpg" alt="轮播图4" />
         </li>
       </ul>
 
@@ -896,9 +896,9 @@
         <div class="history-timeline-box third-row">
           <!-- 2013 -->
           <ul class="history-timeline">
-            <li class="first-arrow">
+            <!-- <li class="first-arrow">
               <img src="img/icon/red_right_arrow.png" />
-            </li>
+            </li> -->
             <li>
               <ul class="content-box red reverse">
                 <li class="dot red"></li>
@@ -956,7 +956,7 @@
                 <li class="line red"></li>
                 <li class="box red">
                   <p>2020年</p>
-                  <p>人工只能专业</p>
+                  <p>人工智能专业</p>
                 </li>
               </ul>
             </li>
@@ -996,6 +996,12 @@
                   <p>（人工智能学院）</p>
                 </li>
               </ul>
+            </li>
+          </ul>
+          <!-- 2013 -->
+          <ul class="history-timeline">
+            <li class="first-arrow">
+              <img src="img/icon/red_right_arrow.png" />
             </li>
           </ul>
         </div>
