modify js script

--- a/index.html
+++ b/index.html
@@ -270,10 +270,9 @@
           />
           <h2 class="section-title donation-section-title">捐赠信息</h2>
         </div>
-
         <div class="donation-table">
           <!-- 姓名列 -->
-          <div class="table-col">
+          <div class="table-col name-col">
             <div class="table-header">姓名</div>
             <div class="table-body">
               <!-- 原有数据（至黄立民） -->
@@ -387,7 +386,7 @@
             </div>
           </div>
           <!-- 年级列 -->
-          <div class="table-col">
+          <div class="table-col grade-col">
             <div class="table-header">年级</div>
             <div class="table-body">
               <!-- 原有数据（至黄立民） -->
@@ -501,7 +500,7 @@
             </div>
           </div>
           <!-- 专业列 -->
-          <div class="table-col">
+          <div class="table-col major-col">
             <div class="table-header">专业</div>
             <div class="table-body">
               <!-- 原有数据（至黄立民） -->
